# petite-k8s

./: Cargo.toml  manifest.yaml
src/: autoscaler.rs  client.rs  daemon.rs  dashboard.rs  dns.rs  docker.rs  firewall.rs  lib.rs  main.rs  manifest.rs  node_pool.rs  proxy.rs  registry.rs
