[package]
name = "mini-k8s"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
bollard = "0.18"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
bytes = "1"
tar = "0.4"
tempfile = "3"